Remove footer margin to fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,6 +175,7 @@ footer {
     padding-top: 30px;
     border-top: 15px solid #000;
     border-bottom: 15px solid #000;
+    margin: 0;
 }
 
 .footer-content {
